--- a/debian/control
+++ b/debian/control
@@ -12,13 +12,13 @@ Build-Depends: debhelper (>= 9),
                python3-urwid
 Standards-Version: 3.9.6
 Homepage: https://github.com/Ubuntu-Solutions-Engineering/conjure
-X-Python3-Version: >= 3.3
+X-Python3-Version: >= 3.4
 Vcs-Browser: https://github.com/Ubuntu-Solutions-Engineering/conjure
 Vcs-Git: https://github.com/Ubuntu-Solutions-Engineering/conjure.git
 
 Package: python3-urwid-ubuntu
 Architecture: any
-Depends: ${misc:Depends}, ${python3:Depends}, ${shlibs:Depends}
+Depends: python3-urwid, ${misc:Depends}, ${python3:Depends}, ${shlibs:Depends}
 Provides: ${python:Provides}
 Description: Urwid Widgets for Ubuntu
  Provides styled widgets to use in Ubuntu Terminal UI projects.
